--- a/references.bib
+++ b/references.bib
@@ -416,20 +416,18 @@
   publisher={BMJ Publishing Group Ltd}
 }
 
-@article{howes2022spatio,
-  title={Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa},
-  author={Howes, Adam and Risher, Kathryn A and Stevens, Oliver and Jia, Katherine M and Wolock, Timothy M and Esra, Rachel and Zembe, Lycias and Wanyeki, Ian and Mahy, Mary and Benedikt, Clemens and others},
-  journal={medRxiv},
-  year={2022},
-  publisher={Cold Spring Harbor Laboratory Press}
-}
-
-@article{howes2023integrated,
-  title={Integrated nested Laplace approximations for extended latent Gaussian models with application to the Naomi HIV model},
-  author={Howes, Adam and Stringer, Alex and Flaxman, Seth, and Eaton, Jeffrey},
-  journal={arXiv},
-  year={2023},
-  publisher={Cold Spring Harbor Laboratory Press}
+@article{howes2023spatio,
+    doi = {10.1371/journal.pgph.0001731},
+    author = {Howes, Adam and Risher, Kathryn A. and Nguyen, Van Kính and Stevens, Oliver and Jia, Katherine M. and Wolock, Timothy M. and Esra, Rachel T. and Zembe, Lycias and Wanyeki, Ian and Mahy, Mary and Benedikt, Clemens and Flaxman, Seth R. and Eaton, Jeffrey W.},
+    journal = {PLOS Global Public Health},
+    publisher = {Public Library of Science},
+    title = {{Spatio-temporal estimates of HIV risk group proportions for adolescent girls and young women across 13 priority countries in sub-Saharan Africa}},
+    year = {2023},
+    month = {04},
+    volume = {3},
+    url = {https://doi.org/10.1371/journal.pgph.0001731},
+    pages = {1-14},
+    number = {4}
 }
 
 @article {wolock2021evaluating,
