Add PDF version viewable online

--- a/front-and-back-matter/_welcome-ebook.Rmd
+++ b/front-and-back-matter/_welcome-ebook.Rmd
@@ -1,6 +1,7 @@
 # Welcome {-}
 
 This is the e-book version of my PhD thesis, submitted to Imperial College London in accordance with the requirements of the degree of Doctor of Philosophy in Modern Statistics and Statistical Machine Learning.
+You can alternatively view the [PDF copy](https://athowes.github.io/thesis/main.pdf).
 The associated GitHub repository is [`athowes/thesis`](https://github.com/athowes/thesis).
 
 ## Acknowledgments {-}
